--- a/API/package.json
+++ b/API/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
-    "react-hook-form": "^7.35.0"
+    "react-hook-form": "^7.35.0",
+    "react-redux": "^8.0.2"
   }
 }
