--- a/API/package.json
+++ b/API/package.json
@@ -3,6 +3,12 @@
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "react-hook-form": "^7.35.0",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "react-router": "^6.4.0",
+    "react-router-dom": "^6.4.0"
+  },
+  "devDependencies": {
+    "@types/react-router": "^5.1.19",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
