--- a/store/package.json
+++ b/store/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@hookform/resolvers": "^2.9.8",
     "@mui/icons-material": "^5.10.2",
     "@mui/lab": "^5.0.0-alpha.98",
     "@mui/material": "^5.10.4",
@@ -27,7 +28,8 @@
     "react-toastify": "^9.0.8",
     "sweetalert2": "^11.4.32",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
