--- a/API/package.json
+++ b/API/package.json
@@ -1,11 +1,15 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.6",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "react-hook-form": "^7.35.0",
     "react-redux": "^8.0.2",
     "react-router": "^6.4.0",
     "react-router-dom": "^6.4.0",
+    "react-toastify": "^9.0.8",
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
